# excludarr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  excludarr.code-workspace  pyproject.toml  requirements-dev.txt  requirements-freeze.txt  requirements.txt  tox.ini
.examples/: docker-compose-example.yml  docker_example.env  excludarr-example.yml
.github/: DEVELOPER.md
.github/workflows/: docker.yml  lint.yml
arr-setup/: .gitignore  Dockerfile  pyproject.toml
arr-setup/.examples/: arr-setup-example.yml
arr-setup/arr_setup/: main.py
arr-setup/arr_setup/utils/: config.py  patch_pyarr.py  sonarr.py
arr-setup/docker_scripts/: run_arr_setup.sh
config_arr_setup/: Dockerfile  entrypoint.sh  read_radarr_config.sh  read_sonarr_config.sh
excludarr/: main.py
excludarr/commands/: __init__.py  providers.py  radarr.py  sonarr.py
excludarr/core/: radarr_actions.py  sonarr_actions.py
excludarr/core/utils/: filter_entries.py  patch_pyarr.py
excludarr/modules/justwatch/: __init__.py  exceptions.py  justwatch.py  models.py  queries.py
excludarr/utils/: config.py  filters.py  locales.py  output.py
